apps/drizzle-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drizzle-gateway
  namespace: databases
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drizzle-gateway
  template:
    metadata:
      labels:
        app: drizzle-gateway
    spec:
      containers:
      - name: drizzle-gateway
        image: ghcr.io/drizzle-team/gateway:1.6.2
        ports:
        - containerPort: 4983
        volumeMounts:
        - name: drizzle-gateway-storage
          mountPath: /app

      volumes:
      - name: drizzle-gateway-storage
        persistentVolumeClaim:
          claimName: drizzle-gateway-pvc
